# sudoku-solver

./: .env  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md
backend/: .clang-format  .env  CMakeLists.txt  README.md  buildspec.yml  dependencies.txt
backend/benchmark/: CMakeLists.txt  bench.cpp
backend/include/: README.md
backend/include/handler/: JsonHandler.hpp  JsonHelper.hpp
backend/include/solver/: ColumnNode.hpp  DancingNode.hpp  HeaderNode.hpp  IDancingLinksBodyNode.hpp  IDancingLinksNode.hpp  KnuthsAlgorithm.hpp  RowNode.hpp  SudokuSolver.hpp  SudokuType.hpp  SudokuValidator.hpp
backend/sample/: CMakeLists.txt  SudokuSolverSample.cpp
backend/src/: CMakeLists.txt  README.md
backend/src/handler/: CMakeLists.txt  JsonHandler.cpp  JsonHelper.cpp  main.cpp
backend/src/solver/: CMakeLists.txt  ColumnNode.cpp  ColumnNode.hpp  DancingLinks.cpp  DancingLinks.hpp  DancingNode.cpp  DancingNode.hpp  HeaderNode.cpp  HeaderNode.hpp  IDancingLinksBodyNode.cpp  IDancingLinksNode.cpp  KnuthsAlgorithm.cpp  KnuthsAlgorithm.hpp  RowNode.cpp  RowNode.hpp  SudokuSolver.cpp  SudokuSolver.hpp  SudokuType.hpp  SudokuValidator.cpp  SudokuValidator.hpp  main.cpp
backend/tests/: CMakeLists.txt  JsonHandlerTest.cpp  README.md  Solve16x16SudokuTest.cpp  Solve4x4SudokuTest.cpp  Solve9x9SudokuTest.cpp  SolveSudokuTest.cpp  SudokuSolverTest.cpp  ValidateSudokuTest.cpp
ci/: backend.yml  frontend.yml
ci/backend/: buildspec.yml
ci/frontend/: buildspec.yml
frontend/: .env.development  .env.production  .eslintrc.js  .gitignore  config.toml  gatsby-browser.js  gatsby-config.js  gatsby-config.ts  gatsby-node.js  gatsby-node.ts  gatsby-ssr.tsx  i18n.js  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
frontend/__mocks__/: gatsby.js  node-fetch.js
frontend/content/: _index.md  result.md
frontend/layouts/: index.html
frontend/src/: config.ts  i18n.js  setupTests.js  types.ts  utils.js
frontend/src/__tests__/integration/: language-switching.test.tsx
frontend/src/__tests__/utils/: i18n-test-utils.tsx
frontend/src/components/: AdBanner.tsx  AdMax.tsx  AdSdkLoader.tsx  AdSlotDisplay.tsx  ErrorDisplay.tsx  Footer.js  Footer.tsx  Grid.js  InterstitialAd.tsx  LanguageSwitcher.js  LanguageSwitcher.tsx  Layout.tsx  LoadingSpinner.js  NumberInput.js  NumberPad.tsx  Result.js  SolutionDisplay.tsx  SudokuBoard.tsx  SudokuGrid.tsx  SudokuSolver.tsx  seo.js
frontend/src/components/__tests__/: AdMax.test.tsx  AdSdkLoader.test.tsx  AdSlotDisplay.test.tsx  ErrorDisplay.test.tsx  Footer.test.tsx  InterstitialAd.test.tsx  LanguageSwitcher.test.tsx  NumberPad.test.tsx  SolutionDisplay.test.tsx  SudokuBoard.test.tsx  SudokuGrid.test.tsx  SudokuSolver.test.tsx
frontend/src/components/common/: Footer.tsx  Grid.tsx  NumberInput.tsx
frontend/src/components/common/__tests__/: Footer.test.tsx  Grid.test.tsx  NumberInput.test.tsx
frontend/src/config/: index.ts
frontend/src/hooks/: useSudoku.ts
frontend/src/i18n/: config.ts
frontend/src/i18n/__tests__/: config.test.ts  language-detection.test.ts
frontend/src/locales/en/: translation.json
frontend/src/locales/fr/: translation.json
frontend/src/locales/ja/: translation.json
frontend/src/locales/zh/: translation.json
frontend/src/pages/: 404.js  404.tsx  index.js  index.tsx  result.js  result.tsx
frontend/src/pages/__test__/: 404.test.tsx  index.test.tsx  result.test.tsx
frontend/src/pages/__tests__/: 404.test.tsx  index.test.tsx
frontend/src/static/: ads.txt
frontend/src/styles/: CommonStyles.js  CommonStyles.ts  global.css  theme.ts
frontend/src/types/: index.ts  sudoku.ts
frontend/src/utils/: api.ts  backendValidator.ts  fetchWithHandling.ts  localStorage.ts  sudokuValidation.ts  sudokuValidator.ts  validateBoard.js  validateBoard.ts
frontend/src/utils/__tests__/: api.test.ts  backendValidator.test.ts  sudokuValidation.test.ts  sudokuValidator.test.ts
frontend/static/js/: sudoku-solver.js
